updating swagger mistakes.
