# docs/swagger.yaml
@@ -3731,6 +3731,21 @@ paths:
     get:
       description: Retrieve a service by its ID
       parameters:
+      - description: X-Auth-Token
+        in: header
+        name: X-Auth-Token
+        required: true
+        type: string
+      - description: X-Company-ID
+        in: header
+        name: X-Company-ID
+        required: true
+        type: string
+      - description: Service ID
+        in: path
+        name: id
+        required: true
+        type: string
       - description: Service ID
         in: path
         name: id
@@ -3747,6 +3762,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/DTO.ErrorResponse'
+        "401":
+          description: Unauthorized
+      security:
+      - ApiKeyAuth: []
       summary: Get service by ID
       tags:
       - Service
@@ -3813,6 +3832,10 @@ paths:
         name: id
         required: true
         type: string
+      - description: Profile image
+        in: formData
+        name: profile
+        type: file
       produces:
       - application/json
       responses:
@@ -3872,6 +3895,21 @@ paths:
     get:
       description: Retrieve a service by its name
       parameters:
+      - description: X-Auth-Token
+        in: header
+        name: X-Auth-Token
+        required: true
+        type: string
+      - description: X-Company-ID
+        in: header
+        name: X-Company-ID
+        required: true
+        type: string
+      - description: Service ID
+        in: path
+        name: id
+        required: true
+        type: string
       - description: Service Name
         in: path
         name: name
@@ -3888,6 +3926,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/DTO.ErrorResponse'
+        "401":
+          description: Unauthorized
+      security:
+      - ApiKeyAuth: []
       summary: Get service by name
       tags:
       - Service
